--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,16 +4,29 @@ cmake_minimum_required(VERSION 3.22)
 set(TARGET http_server)
 add_executable(${TARGET} main.cpp)
 
+add_library(server
+    server.cpp
+    http.cpp
+)
+target_link_libraries(server ${Boost_LIBRARIES})
+
 set(Boost_USE_STATIC_LIBS        ON)  # only find static libs
 set(Boost_USE_DEBUG_LIBS         OFF) # ignore debug libs and
 set(Boost_USE_RELEASE_LIBS       ON)  # only find release libs
 set(Boost_USE_MULTITHREADED      ON)
 set(Boost_USE_STATIC_RUNTIME    OFF)
-find_package(Boost COMPONENTS log log_setup)
-# find_package(Boost)
-if(Boost_FOUND)
-    include_directories(${Boost_INCLUDE_DIRS})
-    message(STATUS "Boost libraries: ${Boost_LIBRARIES}")
-    target_link_libraries(${TARGET} ${Boost_LIBRARIES})
-endif()
+find_package(Boost COMPONENTS log log_setup REQUIRED)
+message(STATUS "Boost libraries: ${Boost_LIBRARIES}")
+set(BOOST_LIB ${Boost_LIBRARIES})
+
+include_directories(${Boost_INCLUDE_DIRS})
+include_directories(.)
+
+target_link_libraries(
+    ${TARGET}
+    server
+    ${Boost_LIBRARIES}
+)
+
+add_subdirectory(test)
 
