http buffer - able to assemble multiple messages in one packet

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 project("server")
 cmake_minimum_required(VERSION 3.22)
 
+set(CMAKE_CXX_FLAGS -ggdb3 )
+
+
 set(TARGET http_server)
 add_executable(${TARGET} main.cpp)
 
@@ -11,7 +14,7 @@ add_library(server
 target_link_libraries(server ${Boost_LIBRARIES})
 
 set(Boost_USE_STATIC_LIBS        ON)  # only find static libs
-set(Boost_USE_DEBUG_LIBS         OFF) # ignore debug libs and
+set(Boost_USE_DEBUG_LIBS         ON) # ignore debug libs and
 set(Boost_USE_RELEASE_LIBS       ON)  # only find release libs
 set(Boost_USE_MULTITHREADED      ON)
 set(Boost_USE_STATIC_RUNTIME    OFF)
