--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,8 +3,9 @@ include_directories(${GTEST_INCLUDE_DIR})
 include_directories(${LUA_INCLUDE_DIR})
 include_directories(..)
 
-file(GLOB TEST_FILES *.cpp)
+file(GLOB TEST_FILES *.cpp) 
 enable_testing()
+
 add_executable(test_http_server ${TEST_FILES})
 target_compile_definitions(test_http_server PRIVATE TEST_SRC_DIR=${CMAKE_CURRENT_SOURCE_DIR})
 
@@ -18,3 +19,6 @@ target_link_libraries(
     ${Boost_LIBRARIES}
     GTest::gtest GTest::gtest_main
 )
+
+add_test(NAME test_it
+    COMMAND test_http_server)
